workloads/jujudb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jujudb
  namespace: jujudb
  labels:
    app: jujudb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jujudb
  template:
    metadata:
      labels:
        app: jujudb
    spec:
      # Si ton registre git.bapttf.com est privé, décommente les lignes suivantes et ajoute le secret
      # imagePullSecrets:
      #   - name: regcred 
      containers:
        - name: jujudb
          image: git.bapttf.com/bapttf/jujudb:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 20m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          ports:
            - containerPort: 8080
